--- a/入门.md
+++ b/入门.md
@@ -501,7 +501,7 @@ PR链接： https://github.com/InternLM/Tutorial/pull/1225
 
 > 第三期书生大模型实战营笔记
 
-仓库链接：
+仓库链接：https://github.com/nonll/InternLM-Camp3
 
 ## 参考
 
