--- a/基础岛/第1关_书生大模型全链路开源体系.md
+++ b/基础岛/第1关_书生大模型全链路开源体系.md
@@ -10,6 +10,7 @@
 ## 文档
 > [readme.md](https://github.com/InternLM/Tutorial/blob/camp3/docs/L1/HelloIntern/readme.md)
 
+[书生·浦语大模型全链路开源开放体系](https://www.bilibili.com/video/BV18142187g5/)
 
 ## 作业
 
