--- a/基础岛/第3关_浦语提示词工程实践.md
+++ b/基础岛/第3关_浦语提示词工程实践.md
@@ -34,5 +34,66 @@
 
 ## 文档
 
+### 0. 前期准备
+
+
+```bash
+
+# 1. 创建虚拟环境
+conda create -n langgpt python=3.10 -y
+# 2. 激活虚拟环境
+conda activate langgpt
+# 3. 安装一些必要的库
+conda install pytorch==2.1.2 torchvision==0.16.2 torchaudio==2.1.2 pytorch-cuda=12.1 -c pytorch -c nvidia -y
+
+# 4. 安装其他依赖
+pip install transformers==4.43.3
+
+pip install streamlit==1.37.0
+pip install huggingface_hub==0.24.3
+pip install openai==1.37.1
+pip install lmdeploy==0.5.2
+```
+
+```bash
+# tmux 多会话终端
+apt-get install tmux
+```
+
+### 1. 模型部署
+
+> 基于LMDeploy将开源的InternLM2-chat-1_8b模型部署为OpenAI格式的通用接口
+
+1.1 获取模型
+
+1.2 部署模型为OpenAI server
+
+1.3 图形化界面调用
+
+### 2. 提示工程(Prompt Engineering)
+2.1 什么是Prompt
+2.2 什么是提示工程
+2.3 提示设计框架
+
+### 3. LangGPT结构化提示词
+3.1 LangGPT结构
+3.2 编写技巧
+### 4. 浦语提示词工程实践(LangGPT版)
+4.1 LangGPT社区优质应用展示
+
+4.2 娱乐应用开发
+
 ## 作业
+
+### 基础任务
+
+1. 获取模型
+![3-1获取模型internlm2-chat-1_8b](vx_images/3-1获取模型internlm2-chat-1_8b.png)
+
+2. 运行
+ ![3-2启动ui](vx_images/3-2启动ui.png)
+
+3. web界面
+
+![3-3web界面](vx_images/3-3web界面.png)
 
