--- a/基础岛/第1关_书生大模型全链路开源体系.md
+++ b/基础岛/第1关_书生大模型全链路开源体系.md
@@ -10,7 +10,7 @@
 ## 文档
 > [readme.md](https://github.com/InternLM/Tutorial/blob/camp3/docs/L1/HelloIntern/readme.md)
 
-[书生·浦语大模型全链路开源开放体系](https://www.bilibili.com/video/BV18142187g5/)
+[【B站】书生·浦语大模型全链路开源开放体系](https://www.bilibili.com/video/BV18142187g5/)
 
 ## 作业
 
@@ -18,3 +18,76 @@
 ![0-1书生·浦语大模型全链路开源开放体系](vx_images/0-1书生·浦语大模型全链路开源开放体系.png)
 
 
+书生·浦语大模型介绍：介绍了书生·浦语大模型及其工具链
+![0-2发展史](vx_images/0-2发展史.png)
+![0-3书生性能天梯](vx_images/0-3书生性能天梯.png)
+![0-4书生·浦语2.5概览](vx_images/0-4书生·浦语2.5概览.png)
+![0-5核心技术思路](vx_images/0-5核心技术思路.png)
+
+
+![0-6高质量合成数据](vx_images/0-6高质量合成数据.png)
+
+![0-7领先的推理能力](vx_images/0-7领先的推理能力.png)
+
+![0-8大海捞针实验](vx_images/0-8大海捞针实验.png)
+
+
+![0-9基于规划和搜索解决复杂问题](vx_images/0-9基于规划和搜索解决复杂问题.png)
+
+![0-10全链条开源](vx_images/0-10全链条开源.png)
+
+![0-11数据](vx_images/0-11数据.png)
+
+![0-12开源数据处理工具箱](vx_images/0-12开源数据处理工具箱.png)
+
+![0-13预训练InternEvo](vx_images/0-13预训练InternEvo.png)
+
+![0-14微调XTuner](vx_images/0-14微调XTuner.png)
+
+
+![0-15微调XTuner](vx_images/0-15微调XTuner.png)
+
+![0-16微调XTuner](vx_images/0-16微调XTuner.png)
+
+![0-17OpenCompass评测体系](vx_images/0-17OpenCompass评测体系.png)
+
+![0-18OpenCompass评测体系](vx_images/0-18OpenCompass评测体系.png)
+
+![0-19OpenCompass评测体系](vx_images/0-19OpenCompass评测体系.png)
+
+![1-20部署LMDeploy](vx_images/1-20部署LMDeploy.png)
+
+![1-21部署LMDeploy](vx_images/1-21部署LMDeploy.png)
+
+![1-22智能体](vx_images/1-22智能体.png)
+
+![1-23智能体](vx_images/1-23智能体.png)
+
+![1-24智能体MindSearch](vx_images/1-24智能体MindSearch.png)
+
+![1-25企业级知识库构建工具](vx_images/1-25企业级知识库构建工具.png)
+
+![1-26企业级知识库构建工具](vx_images/1-26企业级知识库构建工具.png)
+
+![1-27全链条开源](vx_images/1-27全链条开源.png)
+
+
+
+
+
+
+
+数据质量驱动模型性能
+大海捞针实验
+
+要点:
+- 🌟 英特尔LM2模型，1.8B参数，轻量化，适用于个人开发机。
+- 💻 使用InterStudio创建开发环境，实现模型训练和部署。
+- 🔎 自由文本图像组合模型，解决复杂视觉语言问题。
+- 🎈 lm deploy支持模型压缩、量化、分发，兼容性好。
+- 📡 Web demo利用streamlit，轻松展示模型效果。
+- 🌈 英特尔VL2模型，综合性能媲美国际闭源商业模型，支持多种模态。
+- 🖼️ 图文理解对话功能，演示上传图像和指令输入，体验模型理解能力。
+- 🌐 lm deploy支持英特尔l mx composer和英特尔VL2系列模型部署。
+- 📝 输入指令和文本，模型即时反馈，展示语言处理效果。
+- 🌟 最后，邀请用户为教程点赞，表示感谢与支持。
